# Marcel

./: .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE-THIRD-PARTY  README.md
.claude/: settings.json
docs/plans/: client-server-refactor.md  realsense-snap.md
documents/cuda/: setup.cpp  setup.cu  slide0.cpp  slide1.cpp  slide1.cu  slide2.cpp  slide2.cu  slide3.cu  slide4.cu  slide6.cpp
documents/realsense/: setup.cpp  slide0.cpp
documents/test/: setup.cpp  slide0.cpp  slide1.cpp
src/: main.cpp
src/editor/: Editor.cpp  Editor.h
src/engine/: ClingEngine.cpp  ClingEngine.h  MarkerExtract.cpp  MarkerExtract.h  SlideEngine.h
src/ipc/: BufferRing.h  Channel.cpp  Channel.h  Protocol.h  Serialize.h
src/render/: SlideInputMap.h  UiFonts.cpp  UiFonts.h
src/slides/: Presentation.cpp  Presentation.h  slides.cpp  slides.cu  slides.h
src/slides/loader/: slides.cpp  slides.cu  slides.h
src/supervisor/: RemoteEngine.cpp  RemoteEngine.h  SlideView.cpp  SlideView.h  SupervisorLogic.cpp  SupervisorLogic.h  TextureImport.cpp  TextureImport.h  WorkerProcess.cpp  WorkerProcess.h
src/system/: DpiInfo.cpp  DpiInfo.h  stdcapture.h  sys_util.h
src/tools/: snap_main.cpp
src/worker/: HeadlessGL.cpp  HeadlessGL.h  ShmBuffer.h  SlideClipboard.h  SlideRenderer.cpp  SlideRenderer.h  TextureExport.cpp  TextureExport.h  WorkerApp.cpp  WorkerApp.h  worker_main.cpp
test/: BufferRingTest.cpp  DpiInfoTest.cpp  InputMapTest.cpp  IpcChannelTest.cpp  MarkerExtractTest.cpp  SerializeTest.cpp  SupervisorLogicTest.cpp  main_test.cpp
